# mtab_dev

./: m_config.py  requirements.txt  run_semtab.py
api/: m_setting.py
api/annotator/: m_semantic.py  m_spacy.py  m_tabano.py  m_table_annotation.py
api/lookup/: m_entity_fuzzy.py  m_google.py  m_mtabes.py  m_wikidata.py  m_wikidata_hist.py  m_wikidata_sparql.py  m_wikipedia.py
api/resources/: m_db_fuzzy.py  m_db_item.py  m_db_rocks.py
data/mtab/data/models/: deletes_all_d2_pl14.lmdb  mapping_id.lmdb  wiki_items.lmdb  wiki_labels.lmdb
mtab_baseline/: README.md  api_f  customizelog.md  m_config.py  mtab_doc.py  pyproject.toml
mtab_baseline/data/mtab/data/models/: mapping_id.lmdb
mtab_baseline/mtab_baseline/: main.py  main_api.py
mtab_baseline/mtab_baseline/annotator/: m_semantic.py  m_structure.py  main.py
mtab_baseline/mtab_baseline/resources/: m_item.py  m_item_labels.py
mtab_baseline/scripts/: dev.py
tests/: test_io.py
