[tool.poetry]
name = "mtab_baseline"
version = "2.0.0"
description = ""
authors = ["Binh Vu <binh@toan2.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
sem-desc = "^3.5.1"
kgdata = "^2.2.1"
charamel = "^1.0.0"
clevercsv = "0.6.8"
ftfy = "^6.1.1"
tabulate = "^0.8.9"
petl = "1.7.2"
texttable = "1.6.3"
symspellpy = "6.7.6"
wikitextparser = "0.47.5"
scipy = "^1.8.0"
Markdown = "3.3.4"
jellyfish = "0.8.2"
rapidfuzz = "0.14.2"
elasticsearch = "^7.12.1"
fasttext = "0.9.2"
lmdb = "1.2.1"
msgpack = "1.0.2"
lz4 = "3.1.3"
spacy = "^3.2.4"
lxml = "^4.9.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
