[tool.poetry]
name = "mtab_baseline"
version = "2.1.0"
description = ""
authors = ["Binh Vu <binh@toan2.com>"]
license = "MIT"
packages = [
    { include = "mtab_baseline" },
    { include = "api" },
    { include = "api_f" },
    { include = "m_config.py" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
sem-desc = "^4.1.6"
kgdata = "^3.3.1"
charamel = "^1.0.0"
clevercsv = "0.6.8"
ftfy = "^6.1.1"
tabulate = ">= 0.8.10"
petl = "1.7.2"
texttable = "1.6.3"
symspellpy = "6.7.6"
wikitextparser = "0.47.5"
scipy = "^1.8.0"
Markdown = "3.3.4"
jellyfish = "0.8.2"
rapidfuzz = "0.14.2"
elasticsearch = "^7.12.1"
fasttext = "0.9.2"
lmdb = "1.2.1"
msgpack = "1.0.2"
lz4 = "^4.0.2"
spacy = "^3.2.4"
lxml = "^4.9.0"
h5py = "^3.7.0"
click = ">=8.0.0,<=8.0.4"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
ipykernel = "^6.16.0"
sm-grams = "^2.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
